--- a/tools/cfgs/custom_models/pv_rcnn.yaml
+++ b/tools/cfgs/custom_models/pv_rcnn.yaml
@@ -1,4 +1,4 @@
-CLASS_NAMES: ['Vehicle', 'Pedestrian', 'Cyclist']
+CLASS_NAMES: ['car', 'pedestrian', 'cyclist']
 
 DATA_CONFIG:
     _BASE_CONFIG_: ../dataset_configs/custom_dataset.yaml
