--- a/tools/cfgs/custom_models/second.yaml
+++ b/tools/cfgs/custom_models/second.yaml
@@ -1,7 +1,7 @@
-CLASS_NAMES: ['Vehicle', 'Pedestrian', 'Cyclist']
+CLASS_NAMES: ['car', 'pedestrian', 'cyclist']
 
 DATA_CONFIG:
-    _BASE_CONFIG_: cfgs/dataset_configs/custom_dataset.yaml
+    _BASE_CONFIG_: ../dataset_configs/custom_dataset.yaml
 
 
 MODEL:
